--- a/Dockerfile-el8
+++ b/Dockerfile-el8
@@ -1,5 +1,5 @@
 FROM rockylinux:8
-RUN dnf -y install openssh-clients
+RUN dnf -y install openssh-clients openssh-server
 
 COPY --chmod=0755 survey.bash /survey.bash
 CMD [ "/survey.bash" ]
